--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,29 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-requests = "*"
-webargs = "*"
-flask = "*"
+requests = "==2.26.0"
+webargs = "==8.0.1"
+certifi = "==2021.5.30"
+charset-normalizer = "==2.0.6"
+click = "==8.0.1"
+colorama = "==0.4.4"
+dnspython = "==2.1.0"
+email-validator = "==1.1.3"
+idna = "==3.2"
+itsdangerous = "==2.0.1"
+marshmallow = "==3.13.0"
+python-dateutil = "==2.8.2"
+six = "==1.16.0"
+text-unidecode = "==1.3"
+urllib3 = "==1.26.7"
+Flask = "==2.0.1"
+Faker = "==8.12.1"
+Flask-Login = "==0.5.0"
+Flask-WTF = "==0.15.1"
+Jinja2 = "==3.0.1"
+MarkupSafe = "==2.0.1"
+Werkzeug = "==2.0.1"
+WTForms = "==2.3.3"
 
 [dev-packages]
 
