--- a/Pipfile
+++ b/Pipfile
@@ -30,6 +30,11 @@ WTForms = "==2.3.3"
 django = "==3.2.7"
 ipython = "*"
 pillow = "*"
+django-extensions = "*"
+flake8 = "*"
+flake8-builtins = "*"
+flake8-import-order = "*"
+pep8-naming = "*"
 
 [dev-packages]
 
