Resume spoiler update -Added possibility to read all types of files and display it in box on Profile page

--- a/Pipfile
+++ b/Pipfile
@@ -37,6 +37,8 @@ flake8-import-order = "*"
 pep8-naming = "*"
 django-debug-toolbar = "*"
 django-grappelli = "*"
+python-docx = "*"
+pypdf2 = "*"
 
 [dev-packages]
 
