--- a/Pipfile
+++ b/Pipfile
@@ -28,17 +28,19 @@ MarkupSafe = "==2.0.1"
 Werkzeug = "==2.0.1"
 WTForms = "==2.3.3"
 django = "==3.2.7"
-ipython = "*"
-pillow = "*"
-django-extensions = "*"
-flake8 = "*"
-flake8-builtins = "*"
-flake8-import-order = "*"
-pep8-naming = "*"
-django-debug-toolbar = "*"
-django-grappelli = "*"
-python-docx = "*"
-pypdf2 = "*"
+ipython = "7.29.0"
+pillow = "8.4.0"
+django-extensions = "3.1.3"
+flake8 = "4.0.1"
+flake8-builtins = "1.5.3"
+flake8-import-order = "0.18.1"
+pep8-naming = "0.12.1"
+django-debug-toolbar = "3.2.2"
+django-grappelli = "2.15.3"
+python-docx = "0.8.11"
+pypdf2 = "1.26.0"
+django-braces = "1.14.0"
+
 [dev-packages]
 
 [requires]
