--- a/Pipfile
+++ b/Pipfile
@@ -40,6 +40,7 @@ django-grappelli = "2.15.3"
 python-docx = "0.8.11"
 pypdf2 = "1.26.0"
 django-braces = "1.14.0"
+social-auth-app-django = "5.0.0"
 
 [dev-packages]
 
